[project]
name = "vamos"
version = "0.1.0"
description = "Inference and deployment utilities for VAMOS navigation VLMs"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "accelerate>=0.20.0",
    "datasets>=2.12.0",
    "fastapi>=0.100.0",
    "huggingface-hub>=0.16.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "onnx>=1.14.0",
    "onnxruntime>=1.15.0",
    "opencv-python>=4.8.0",
    "optimum[exporters,onnxruntime]>=1.16.0,<2",
    "pandas>=2.0.0",
    "peft>=0.4.0",
    "pillow>=9.5.0",
    "psutil>=5.9.0",
    "pydantic>=2.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "tokenizers>=0.13.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.65.0",
    "trajectory-prediction",
    "trajectory-projection",
    "transformers>=4.30.0",
    "uvicorn[standard]>=0.22.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.20.0",
    "jupyter>=1.0.0",
    "notebook>=6.5.0",
]
ros = [
    "catkin-pkg>=1.0.0",
    "catkin-tools>=0.9.5",
    "rospkg>=1.6.0",
]

[tool.uv.sources]
trajectory-prediction = { path = "vamos_ws/src/trajectory_prediction", editable = true }
trajectory-projection = { path = "vamos_ws/src/trajectory_projection", editable = true }

[tool.uv]
default-groups = []
package = false
